#tran.phung Create đánh giá bình luận single_list
update 14/3/2020  time: 4:33

--- a/public/leramiz/css/style1.css
+++ b/public/leramiz/css/style1.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+.row.single_list {
+    margin-top: 20px;
+}
+
 ul.dropdown-menu.show li a:hover {
     color: #30cca0;
 }
