Revert "Thêm vài chi tiết trong trang đăng tin Khách hàng"
This reverts commit f31df13ea1f29a58fbcf0a401a15a78040457fb2.

--- a/resources/views/layouts/user/html/index.html
+++ b/resources/views/layouts/user/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>REAL ESTATE - Sàn Giao Dịch BĐS</title>
+	<title>LERAMIZ - Landing Page Template</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="LERAMIZ Landing Page Template">
 	<meta name="keywords" content="LERAMIZ, unica, creative, html">
