--- a/resources/views/layouts/user/html/single-blog.html
+++ b/resources/views/layouts/user/html/single-blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>REAL ESTATE - Sàn Giao Dịch BĐS</title>
+	<title>LERAMIZ - Landing Page Template</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="LERAMIZ Landing Page Template">
 	<meta name="keywords" content="LERAMIZ, unica, creative, html">
@@ -40,7 +40,7 @@
 					<div class="col-lg-6 header-top-left">
 						<div class="top-info">
 							<i class="fa fa-phone"></i>
-							0939.630.348
+							(+88) 666 121 4321
 						</div>
 						<div class="top-info">
 							<i class="fa fa-envelope"></i>
@@ -72,7 +72,7 @@
 							<i class="fa fa-bars"></i>
 						</div>
 						<ul class="main-menu">
-							<li><a href="index.html">Trang Chủ</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="categories.html">FEATURED LISTING</a></li>
 							<li><a href="about.html">ABOUT US</a></li>
 							<li><a href="single-list.html">Pages</a></li>
@@ -92,7 +92,7 @@
 		<div class="container text-white">
 			<div class="row">
 				<div class="col-xl-8 offset-lg-2">
-					<h2>...........................</h2>
+					<h2>Housing confidence hits record high as prices skyrocket</h2>
 					<a href=""><i class="fa fa-user"></i>Amanda Seyfried</a>
 					<a href=""><i class="fa fa-clock-o"></i>25 Jun 2018</a>
 				</div>
