--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -1407,9 +1407,7 @@ li.list-group-item1 {
     font-size: 26px;
     letter-spacing: 2px;
 }
-.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
-	border-top: none !important;
-}
+
 .tab-content > .active {
 	display: block;
 	visibility: visible;
@@ -1453,7 +1451,7 @@ section#tables  p {
 }
 .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
 	font-size: 0.9em;
-	color: #999;
+	color:#3b3434 !important;
 	border-top: none !important;
 }
 .tab-content > .active {
@@ -3099,9 +3097,7 @@ div#graph1, div#graph4, div#graph5, div#graph6, div#graph7, div#graph8, div#grap
 .agile-last-left.agile-last-middle {
     margin: 1em 0;
 }
-.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
-    font-size: 0.75em;
-}
+
 #drop {
     padding: 50px 16px;
 }
