--- a/public/leramiz/css/style.css
+++ b/public/leramiz/css/style.css
@@ -104,10 +104,7 @@ ol {
 	background-position: top center;
 }
 
-.spad {
-	padding-top: 100px;
-	padding-bottom: 100px;
-}
+
 
 .text-white h1,
 .text-white h2,
@@ -258,9 +255,10 @@ ol {
 }
 
 .user-panel > a {
-	color: #fff;
+	color: black;
 	padding: 0 11px;
 	border-left: 1px solid #667792;
+	text-shadow: 0 0 0.5px;
 }
 
 .user-panel a i {
@@ -269,6 +267,13 @@ ol {
 
 .user-panel a:last-child {
 	margin-right: 0;
+	color: black;
+	text-decoration: none;
+	text-shadow: 0 0 0.5px;
+}
+.user-panel a:last-child:hover {
+	color: #30caa8;
+	text-shadow: 0 0 0.5px;
 }
 
 .site-logo {
@@ -1046,10 +1051,8 @@ ol {
 }
 
 .page-section {
-	padding-bottom: 100px;
-	/* margin-top: 111px; */
+	/* padding-bottom: 100px; */
 	position: relative;
-	top: 124px;
 }
 
 .site-pagination {
