#phuc.nguyen edit dashboard

--- a/public/leramiz/css/style1.css
+++ b/public/leramiz/css/style1.css
@@ -329,3 +329,29 @@ div#curency a:hover {
     /* margin-bottom: 5px; */
     top: 0;
     }
+    
+
+.container-fuild.bg_top1.xanh {
+    height: 60px;
+    /* background-size: 18px; */
+    background-color: #30caa8;
+    /* opacity: 0.9; */
+}
+.nav.xanh {
+    margin-top: -11px;
+}
+.col-lg-6.text-lg-right.header-top-right.xanh {
+    margin-top: -11px;
+}
+.container-fuild.bg_top1 {
+    /* background-size: 18px; */
+    transition: 0.5s;
+
+}
+.nav {
+    transition: 0.5s;
+}
+.col-lg-6.text-lg-right.header-top-right {
+    transition: 0.5s;
+
+}
